--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Bootstrap</title>
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css" />
-        <link rel="stylesheet" href="node_modules/lightbox2/dist/css/lightbox.min.css" />
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" href="css/bootstrap-icons/bootstrap-icons.min.css" />
+        <link rel="stylesheet" href="css/lightbox.min.css" />
         <style>
             header {
                 background-image: url(images/bg-intro-min.jpg);
@@ -123,7 +123,7 @@
             </div>
         </section>
 
-        <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/lightbox-plus-jquery.min.js"></script>
     </body>
 </html>
